--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,51 @@
+old/**/__pycache__/
+old/**/**/__pycache__/
+old/**/**/**/__pycache__/
+old/**/**/**/**/__pycache__/
+old/**/**/**/**/**/__pycache__/
+old/**/**/**/**/**/**/__pycache__/
+
+src/**/__pycache__/
+src/**/**/__pycache__/
+src/**/**/**/__pycache__/
+src/**/**/**/**/__pycache__/
+src/**/**/**/**/**/__pycache__/
+src/**/**/**/**/**/**/__pycache__/
+
+__init__.py
+src/weights/RealESRGAN_x4plus.pth
+utils/labelimg_dot/resource/
+src/__init__.py
+#assets
+src/Assets/
+setup_cam.bat
+req_dev.txt
+
+#integration
+src/Integration/service_v1/configs/__init__.py
+src/Integration/service_v1/controller/__init__.py
+src/Integration/service_v1/crud/__init__.py
+src/Integration/service_v1/db/__init__.py
+src/Integration/service_v1/models/__init__.py
+src/Integration/service_v1/routes/__init__.py
+src/Integration/service_v1/schema/__init__.py
+
+src/config/__init__.py
+src/controller/__init__.py
+src/Integration/__init__.py
+src/model/__init__.py
+src/weights/yolov8n_openvino_model/
+.idea/
+
+#experiments
+exp/
+
+__pychache__/
+
+#assets training
+src/Assets/Breakdown/
+src/Assets/data_res_plat/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -159,4 +207,3 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
